added hateoas
